--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #00b7ff;
     padding: 20px;
     color: #fff;
     width: 100%;
